--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-numpy==1.16.4
+numpy==1.19.5
 scipy==1.5.4
 pillow==8.0.1
 h3py==1.0.0 --trusted-host 52.32.111.111
 matplotlib==3.3.3
 opencv-python==4.4.0.42
-jupyterlab==2.2.9 --find-links=libs/test/test
+jupyterlab==2.2.9
 scikit-learn==0.23.2
 torch==1.11.0 --index-url=https://nutrino.com
---find-links=libs/test/test
+
 --index-url=https://nutrino.com
---trusted-host 52.32.111.111
+--trusted-host=52.32.111.111
